Fixed styling with x scrollbar not disappearing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,10 @@
+html {
+    overflow-x: hidden;
+}
+
 html, body {
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
     font-family: VT323, sans-serif;
     background-color: #417ec1;
     color: white;
@@ -10,6 +13,7 @@ html, body {
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 h2 {
@@ -17,5 +21,6 @@ h2 {
 }
 
 .container {
+    display: flex;
     margin: 5rem 5rem;
 }
